30Mar00=======================================================================
1. altered client.pl connect code so that it doesn't falsely recognise 
/spider/src/client as a 'client' instruction.
28Mar00=======================================================================
1. Added buffering to client 
2. Fixed LOGIN so that you can login with an arbitrary callsign
27Mar00=======================================================================
1. updated wpxloc.raw and rsgb.cty for 4W and TX0.
2. display 'start time' rather than 'last start time in' in who.
3. Allow local users to see their own sh/talk or sh/log stuff.
4. A more robust version of the C client.
5. Added a message exporting command 'export'.
6. allow swopping on all messages, including imported and manually sent ones
7. S A < B @ C $BID now works from the command line and thus bbses ought to
be able to send messages into the cluster. Bids are (currently) ignored.
26Mar00=======================================================================
1. first cut of C client
18Mar00=======================================================================
1. fixed convkeps.pl so that it accepts more formats for floating point.
08Mar00=======================================================================
1. tidied up Sun.pm and sh/sat
2. fixed sh/qra so that the correct lat/long is displayed if only one locator
is given.
10Jan00=======================================================================
1. added Steve Franke's new Sun.pm and show/satellite command
08Jan00=======================================================================
1. really removed the restriction on 0 length messages.
2. added a periodic msg file import system a la FBB. Stick one or more files
into /spider/msg/import with a suitable SEND line, subject and the text and 
it will import it. The importer will accept some BBS syntax (eg < GB7TLH) to
allow you to customise the 'from' callsign.