@@ -1,3 +1,9 @@
+31Mar00=======================================================================
+1. fixed nnn-mmm in kill (erase/delete) msgs so that mmm is also deleted and
+not just nnn -> mmm-1.
+2. Added an autosplit to message importing so that messages are split
+automagically into bits if the filename used in the import directory starts
+with "split". This will add a [1/5] type string on the the end of the subject. 
 30Mar00=======================================================================
 1. altered client.pl connect code so that it doesn't falsely recognise 
 /spider/src/client as a 'client' instruction.
